ENH: Added wrappers for itkTclStringStream and itkTclCommand.

--- a/Wrapping/Tcl/Common/CMakeLists.txt
+++ b/Wrapping/Tcl/Common/CMakeLists.txt
@@ -1,8 +1,13 @@
 INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Wrapping/Tcl/Numerics)
 
-ADD_LIBRARY(ITKCommonTcl)
+ADD_LIBRARY(ITKCommonTcl
+  itkTclCommand.cxx
+  itkTclStringStream.cxx
+)
+
 CABLE_WRAP_TCL(ITKCommonTcl
   wrap_ITKCommon.cxx
+  wrap_ITKUtils.cxx
   wrap_ITKBase.cxx
   wrap_itkImage.cxx
 )
