ENH: new filter to compute the similarity index between the set of non-zero pixels in two images.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -75,6 +75,7 @@ ADD_TEST(itkReflectiveImageRegionIteratorTest itkBasicFiltersTests  itkReflectiv
 ADD_TEST(itkReflectImageFilterTest itkBasicFiltersTests itkReflectImageFilterTest)
 ADD_TEST(itkResampleImageTest itkBasicFiltersTests itkResampleImageTest)
 ADD_TEST(itkRecursiveGaussianImageFiltersTest itkBasicFiltersTests itkRecursiveGaussianImageFiltersTest)
+ADD_TEST(itkSimilarityIndexImageFilterTest itkBasicFiltersTests itkSimilarityIndexImageFilterTest)
 ADD_TEST(itkShiftScaleImageFilterTest itkBasicFiltersTests itkShiftScaleImageFilterTest)
 ADD_TEST(itkShrinkImageTest itkBasicFiltersTests itkShrinkImageTest)
 ADD_TEST(itkStatisticsImageFilterTest itkBasicFiltersTests itkStatisticsImageFilterTest)
@@ -169,7 +170,8 @@ itkPlaheImageFilterTest
 itkReflectImageFilterTest 
 itkReflectiveImageRegionIteratorTest 
 itkResampleImageTest 
-itkRecursiveGaussianImageFiltersTest 
+itkRecursiveGaussianImageFiltersTest
+itkSimilarityIndexImageFilterTest 
 itkShiftScaleImageFilterTest 
 itkShrinkImageTest 
 itkStatisticsImageFilterTest 
