ENH: Added more VNL wrappers.

--- a/Wrapping/Tcl/Numerics/CMakeLists.txt
+++ b/Wrapping/Tcl/Numerics/CMakeLists.txt
@@ -10,6 +10,10 @@ CABLE_WRAP_TCL(VXLNumericsTcl
   wrap_vnl_file_matrix.cxx
   wrap_vnl_file_vector.cxx
   wrap_vnl_fortran_copy.cxx
+  wrap_vnl_matrix_fixed.cxx
+  wrap_vnl_matrix_fixed_ref.cxx
+  wrap_vnl_matrix_ref.cxx
+  wrap_vnl_vector_ref.cxx
 )
 
 LINK_LIBRARIES(VXLNumerics ${CABLE_TCL_LIBRARY})
