ENH: Added wrappers for ImageFileReader and ImageFileWriter.

--- a/Wrapping/Tcl/IO/CMakeLists.txt
+++ b/Wrapping/Tcl/IO/CMakeLists.txt
@@ -5,6 +5,8 @@ ADD_LIBRARY(ITKIOTcl)
 CABLE_WRAP_TCL(ITKIOTcl
   wrap_ITKIO.cxx
   wrap_IOBase.cxx
+  wrap_itkImageFileReader.cxx
+  wrap_itkImageFileWriter.cxx
 )
 
 LINK_LIBRARIES(ITKIO ITKCommon VXLNumerics ${CABLE_TCL_LIBRARY})
