ENH: Added ITKBasicFilters wrappers.

--- a/Wrapping/Tcl/BasicFilters/CMakeLists.txt
+++ b/Wrapping/Tcl/BasicFilters/CMakeLists.txt
@@ -1,20 +1,12 @@
+INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Wrapping/Tcl/BasicFilters)
 INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Code/BasicFilters)
 
-ADD_LIBRARY(ITKBasicFiltersTcl SHARED)
-CABLE_CLASS_SET(Scalar float)
-CABLE_CLASS_SET(Dimension 2)
-CABLE_CLASS_SET(Image "itk::Image<$Scalar,$Dimension>")
-CABLE_CLASS_SET(Source "itk::RandomImageSource<$Image >")
+ADD_LIBRARY(ITKBasicFiltersTcl)
 
 CABLE_WRAP_TCL(ITKBasicFiltersTcl
-  $Source
-  "itkSmartPointer_:itk::SmartPointer<$Source >"
+  wrap_ITKBasicFilters.cxx
+  wrap_itkRandomImageSource.cxx
 )
 
-LINK_LIBRARIES(
-ITKCommon
-ITKBasicFilters
-VXLNumerics
-${CABLE_TCL_LIBRARY}
-${TCL_LIBRARY}
-)
+LINK_LIBRARIES(ITKBasicFilters ITKCommon VXLNumerics ${CABLE_TCL_LIBRARY})
+
