ENH: Added wrappers for RecursiveSeparableImageFilter and RecursiveGaussianImageFilter.

--- a/Wrapping/Tcl/BasicFilters/CMakeLists.txt
+++ b/Wrapping/Tcl/BasicFilters/CMakeLists.txt
@@ -6,6 +6,8 @@ ADD_LIBRARY(ITKBasicFiltersTcl)
 CABLE_WRAP_TCL(ITKBasicFiltersTcl
   wrap_ITKBasicFilters.cxx
   wrap_itkRandomImageSource.cxx
+  wrap_itkRecursiveSeparableImageFilter.cxx
+  wrap_itkRecursiveGaussianImageFilter.cxx
 )
 
 LINK_LIBRARIES(ITKBasicFilters ITKCommon VXLNumerics ${CABLE_TCL_LIBRARY})
