--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -67,6 +67,7 @@ ADD_TEST(itkMinMaxCurvatureFlowImageFilterTest itkAlgorithmsTests itkMinMaxCurva
 ADD_TEST(itkMRFImageFilterTest itkAlgorithmsTests itkMRFImageFilterTest)
 ADD_TEST(itkMultiResolutionPyramidImageFilterTest itkAlgorithmsTests itkMultiResolutionPyramidImageFilterTest)
 ADD_TEST(itkRecursiveMultiResolutionPyramidImageFilterTest itkAlgorithmsTests itkRecursiveMultiResolutionPyramidImageFilterTest)
+ADD_TEST(itkRescaleIntensityImageFilterTest itkAlgorithmsTests itkRescaleIntensityImageFilterTest)
 ADD_TEST(itkMultiResolutionPDEDeformableRegistrationTest itkAlgorithmsTests itkMultiResolutionPDEDeformableRegistrationTest)
 ADD_TEST(itkMultiResolutionImageRegistrationMethodTest itkAlgorithmsTests   
 itkMultiResolutionImageRegistrationMethodTest  )
@@ -130,6 +131,7 @@ itkMinMaxCurvatureFlowImageFilterTest
 itkMRFImageFilterTest
 itkMultiResolutionPyramidImageFilterTest 
 itkRecursiveMultiResolutionPyramidImageFilterTest 
+itkRescaleIntensityImageFilterTest
 itkMultiResolutionPDEDeformableRegistrationTest 
 itkMultiResolutionImageRegistrationMethodTest
 itkMultiResolutionImageRegistrationMethodTest_1 
