ENH: Added wrapper for RescaleIntensityImageFilter.

--- a/Wrapping/Tcl/BasicFilters/CMakeLists.txt
+++ b/Wrapping/Tcl/BasicFilters/CMakeLists.txt
@@ -3,11 +3,12 @@ INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Code/BasicFilters)
 
 ADD_LIBRARY(ITKBasicFiltersTcl)
 
-CABLE_WRAP_TCL(ITKBasicFiltersTcl
+ITK_WRAP_TCL(ITKBasicFiltersTcl
   wrap_ITKBasicFilters.cxx
   wrap_itkRandomImageSource.cxx
   wrap_itkRecursiveSeparableImageFilter.cxx
   wrap_itkRecursiveGaussianImageFilter.cxx
+  wrap_itkRescaleIntensityImageFilter.cxx
 )
 
 LINK_LIBRARIES(ITKBasicFilters ITKCommon VXLNumerics ${CABLE_TCL_LIBRARY})
