ENH: Renamed CABLE_WRAP_TCL to ITK_WRAP_TCL.

--- a/Wrapping/Tcl/Common/CMakeLists.txt
+++ b/Wrapping/Tcl/Common/CMakeLists.txt
@@ -5,7 +5,7 @@ ADD_LIBRARY(ITKCommonTcl
   itkTclStringStream.cxx
 )
 
-CABLE_WRAP_TCL(ITKCommonTcl
+ITK_WRAP_TCL(ITKCommonTcl
   wrap_ITKCommon.cxx
   wrap_ITKUtils.cxx
   wrap_ITKBase.cxx
