ENH: added test for LinearSystemWrapperItpack

--- a/Testing/Code/Numerics/FEM/CMakeLists.txt
+++ b/Testing/Code/Numerics/FEM/CMakeLists.txt
@@ -22,6 +22,7 @@ ${ITK_BINARY_DIR}/Code/Numerics/vxl/vnl
 
 SOURCE_FILES(FEM_SRCS
 itkFEMElementTest
+itkFEMLinearSystemWrapperItpackTest
 )
 
 LINK_LIBRARIES (
