--- a/Wrapping/Tcl/CMakeLists.txt
+++ b/Wrapping/Tcl/CMakeLists.txt
@@ -5,7 +5,6 @@ INCLUDE_DIRECTORIES(${TCL_INCLUDE_PATH}
                     ${ITK_SOURCE_DIR}/Code/Numerics/vxl/vcl/doc
                     ${ITK_SOURCE_DIR}/Code/Numerics/vxl/vnl)
 
-SUBDIRS(Numerics Common BasicFilters IO Executable)
-#SUBDIRS(Numerics Common BasicFilters Algorithms)
+SUBDIRS(Numerics Common BasicFilters IO Algorithms Executable)
 
 INCLUDE(${ITK_SOURCE_DIR}/Wrapping/Tcl/itkConfigureTclPackages.cmake)
