ENH: Converted standard image source and image-to-image wrapper configuration to preprocessor macros.  Added image registration metric wrappers in Algorithms library.

--- a/Wrapping/Tcl/Algorithms/CMakeLists.txt
+++ b/Wrapping/Tcl/Algorithms/CMakeLists.txt
@@ -6,6 +6,11 @@ ADD_LIBRARY(ITKAlgorithmsTcl)
 
 ITK_WRAP_TCL(ITKAlgorithmsTcl
   wrap_ITKAlgorithms.cxx
+  wrap_itkImageToImageMetric.cxx
+  wrap_itkMeanSquaresImageToImageMetric.cxx
+  wrap_itkMutualInformationImageToImageMetric.cxx
+  wrap_itkNormalizedCorrelationImageToImageMetric.cxx
+  wrap_itkPatternIntensityImageToImageMetric.cxx
 )
 
 TARGET_LINK_LIBRARIES(ITKAlgorithmsTcl
