ENH: new filter to measure the Hausdorff distance between the non-zero pixels of two images.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -55,6 +55,7 @@ ADD_TEST(itkAddImageFilterTest itkBasicFiltersTests itkAddImageFilterTest)
 ADD_TEST(itkFlipImageFilterTest itkBasicFiltersTests itkFlipImageFilterTest)
 ADD_TEST(itkFloodFillIteratorTest itkBasicFiltersTests itkFloodFillIteratorTest)
 ADD_TEST(itkGaussianImageSourceTest itkBasicFiltersTests itkGaussianImageSourceTest)
+ADD_TEST(itkHausdorffDistanceImageFilterTest itkBasicFiltersTests itkHausdorffDistanceImageFilterTest)
 ADD_TEST(itkImageAdaptorNthElementTest itkBasicFiltersTests itkImageAdaptorNthElementTest)
 ADD_TEST(itkImageAdaptorPipeLineTest itkBasicFiltersTests itkImageAdaptorPipeLineTest)
 ADD_TEST(itkImageToParametricSpaceFilterTest itkBasicFiltersTests itkImageToParametricSpaceFilterTest)
@@ -151,7 +152,8 @@ itkFilterDispatchTest
 itkAddImageFilterTest 
 itkFlipImageFilterTest
 itkFloodFillIteratorTest 
-itkGaussianImageSourceTest 
+itkGaussianImageSourceTest
+itkHausdorffDistanceImageFilterTest 
 itkImageAdaptorNthElementTest 
 itkImageAdaptorPipeLineTest 
 itkImageToParametricSpaceFilterTest 
