ENH: Created a new element base class to make moving the existing code to new framework easier.

--- a/Code/Numerics/FEM/CMakeLists.txt
+++ b/Code/Numerics/FEM/CMakeLists.txt
@@ -20,6 +20,7 @@ SOURCE_FILES(FEM_SRCS
   itkFEMNodeXYZ.cxx
   
   itkFEMElementBase.cxx
+  itkFEMElementNewBase.cxx
   itkFEMElementBar2D.cxx
   itkFEMElementBeam2D.cxx
   itkFEMElementTriC02D.cxx
@@ -98,6 +99,7 @@ SOURCE_FILES(FEM_SRCS
 
   itkFEMElements.h
   itkFEMElementBase.h
+  itkFEMElementNewBase.h
   itkFEMElementStandard.h
   itkFEMElementStd.h
   itkFEMElementBar2D.h
