ENH: Added test for itkSparseFieldLayer

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -87,6 +87,7 @@ ADD_TEST(itkMirrorPadImageTest itkBasicFiltersTests itkMirrorPadImageTest)
 ADD_TEST(itkExtractImageTest itkBasicFiltersTests itkExtractImageTest)
 ADD_TEST(itkCropImageFilterTest itkBasicFiltersTests itkCropImageFilterTest)
 ADD_TEST(itkSinImageFilterAndAdaptorTest itkBasicFiltersTests itkSinImageFilterAndAdaptorTest)
+ADD_TEST(itkSparseFieldLayerTest itkBasicFiltersTests itkSparseFieldLayerTest)
 ADD_TEST(itkSpatialFunctionImageEvaluatorFilterTest itkBasicFiltersTests itkSpatialFunctionImageEvaluatorFilterTest)
 ADD_TEST(itkSqrtImageFilterAndAdaptorTest itkBasicFiltersTests itkSqrtImageFilterAndAdaptorTest)
 ADD_TEST(itkStreamingImageFilterTest itkBasicFiltersTests itkStreamingImageFilterTest)
@@ -178,6 +179,7 @@ itkRescaleIntensityImageFilterTest
 itkSimilarityIndexImageFilterTest 
 itkShiftScaleImageFilterTest 
 itkShrinkImageTest 
+itkSparseFieldLayerTest
 itkStatisticsImageFilterTest 
 itkConstantPadImageTest 
 itkWrapPadImageTest 
