ENH: new filter to interpolate an image from two input images

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -61,6 +61,7 @@ ADD_TEST(itkImageAdaptorPipeLineTest itkBasicFiltersTests itkImageAdaptorPipeLin
 ADD_TEST(itkImageToParametricSpaceFilterTest itkBasicFiltersTests itkImageToParametricSpaceFilterTest)
 ADD_TEST(itkImportImageTest itkBasicFiltersTests itkImportImageTest)
 ADD_TEST(itkInteriorExteriorMeshFilterTest itkBasicFiltersTests itkInteriorExteriorMeshFilterTest )
+ADD_TEST(itkInterpolateImageFilterTest itkBasicFiltersTests itkInterpolateImageFilterTest )
 ADD_TEST(itkJoinImageFilterTest itkBasicFiltersTests itkJoinImageFilterTest)
 ADD_TEST(itkLog10ImageFilterAndAdaptorTest itkBasicFiltersTests itkLog10ImageFilterAndAdaptorTest)
 ADD_TEST(itkLogImageFilterAndAdaptorTest itkBasicFiltersTests itkLogImageFilterAndAdaptorTest)
@@ -159,7 +160,8 @@ itkImageAdaptorNthElementTest
 itkImageAdaptorPipeLineTest 
 itkImageToParametricSpaceFilterTest 
 itkImportImageTest 
-itkInteriorExteriorMeshFilterTest 
+itkInteriorExteriorMeshFilterTest
+itkInterpolateImageFilterTest 
 itkJoinImageFilterTest 
 itkLog10ImageFilterAndAdaptorTest 
 itkLogImageFilterAndAdaptorTest 
