ENH: added a new filter to mask an input image with a mask image.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -65,6 +65,7 @@ ADD_TEST(itkInterpolateImageFilterTest itkBasicFiltersTests itkInterpolateImageF
 ADD_TEST(itkJoinImageFilterTest itkBasicFiltersTests itkJoinImageFilterTest)
 ADD_TEST(itkLog10ImageFilterAndAdaptorTest itkBasicFiltersTests itkLog10ImageFilterAndAdaptorTest)
 ADD_TEST(itkLogImageFilterAndAdaptorTest itkBasicFiltersTests itkLogImageFilterAndAdaptorTest)
+ADD_TEST(itkMaskImageFilterTest itkBasicFiltersTests itkMaskImageFilterTest)
 ADD_TEST(itkMeanImageFilterTest itkBasicFiltersTests itkMeanImageFilterTest)
 ADD_TEST(itkMedianImageFilterTest itkBasicFiltersTests itkMedianImageFilterTest)
 ADD_TEST(itkMultiplyImageFilterTest itkBasicFiltersTests itkMultiplyImageFilterTest)
@@ -165,6 +166,7 @@ itkInterpolateImageFilterTest
 itkJoinImageFilterTest 
 itkLog10ImageFilterAndAdaptorTest 
 itkLogImageFilterAndAdaptorTest 
+itkMaskImageFilterTest
 itkMeanImageFilterTest 
 itkMedianImageFilterTest 
 itkMultiplyImageFilterTest 
