ENH: Rewrite of wrapper configuration macros to make configuring different combinations easier.

--- a/Wrapping/Tcl/Algorithms/CMakeLists.txt
+++ b/Wrapping/Tcl/Algorithms/CMakeLists.txt
@@ -13,6 +13,7 @@ ITK_WRAP_TCL(ITKAlgorithmsTcl
   wrap_itkPatternIntensityImageToImageMetric.cxx
   wrap_itkSimpleFuzzyConnectednessImageFilterBase.cxx
   wrap_itkSimpleFuzzyConnectednessScalarImageFilter.cxx
+  wrap_itkCurvatureFlowImageFilter.cxx
 )
 
 TARGET_LINK_LIBRARIES(ITKAlgorithmsTcl
