ENH: Added generic implementation of body loads, which is suitable for most elements.

--- a/Code/Numerics/FEM/CMakeLists.txt
+++ b/Code/Numerics/FEM/CMakeLists.txt
@@ -62,6 +62,7 @@ SOURCE_FILES(FEM_SRCS
   itkFEMLoadImplementationGravTriC02D.cxx
   itkFEMLoadImplementationGravTetrahedronC03D.cxx
   itkFEMLoadImplementationGravHexahedronC03D.cxx
+  itkFEMLoadImplementationGenericBodyLoad.cxx
 
   itkFEMLoadImplementationEdgeTriC02D.cxx
   itkFEMLoadImplementationEdgeQuadC02D.cxx
