ENH: Added a templated load class - LoadTest.

--- a/Code/Numerics/FEM/CMakeLists.txt
+++ b/Code/Numerics/FEM/CMakeLists.txt
@@ -140,6 +140,10 @@ SOURCE_FILES(FEM_SRCS
   itkFEMLoadImagePairBase.h
   itkFEMLoadImageMetric.h
 
+  itkFEMLoadImplementationTestBar2D.h
+
+  itkFEMLoadTest.h
+
   itkFEMSolver.h
   itkFEMSolverCrankNicolson.h
 
